You can add or update habits within an HabitFile