@@ -1,10 +1,12 @@
 package com.ninocorp.core.portable;
 
+import com.ninocorp.core.util.time.Timestamp;
 import lombok.EqualsAndHashCode;
 
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @EqualsAndHashCode
 public class HabitFile {
@@ -32,6 +34,23 @@ public class HabitFile {
     private List<HabitRow> toHabitRows(Collection<String> lines) {
         return lines.stream()
                 .map(HabitRow::new)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    public void add(HabitRow habitRow) {
+        lines.add(habitRow);
+    }
+
+    public void done(String habit, Timestamp timestamp) {
+        // assume that habits have been ordered in a way
+        // that the ones to be completed first appear earlier
+        // in the habit file
+        for (HabitRow habitRow : lines) {
+            if (habitRow.is(habit)) {
+                habitRow.done(timestamp);
+                // update the first match only
+                break;
+            }
+        }
     }
 }
